# avc_car

./: README.md
avc/: CMakeLists.txt  package.xml
avc/config/: amcl.yaml
avc/config/nav/: local_planner.yaml
avc/launch/: .master.launch.swp  test.launch
avc/launch/includes/amcl/: amcl.launch.xml
avc/launch/includes/sensors/: .static_transforms.launch.xml.swp  static_transforms.launch.xml
avc/nodes/: nav_goals.cpp
avc/urdf/: actual.xacro
avc_car/: CMakeLists.txt  package.xml
nav_stack/: CMakeLists.txt  package.xml
nav_stack/config/: .costmap_common_params.yaml.swp  base_local_planner_params.yaml  costmap_common_params.yaml  laser.yaml  local_costmap_params.yaml  mintaur.lua  move_base.yaml
nav_stack/config_basic/: costmap_common_params_basic.yaml
nav_stack/launch/: .config_temp.launch.swp  config.launch  joy.launch  mapper.launch  master.launch  master_basic.launch  move_base.launch  move_base_basic.launch
nav_stack/maps/: braden_map.pgm  braden_map.yaml  curvy.pgm  curvy.yaml  curvy2.pgm  curvy2.yaml  curvy_actual.pgm  curvy_actual.yaml  curvy_actual_black.pgm  curvy_actual_black.yaml  curvy_ideal.pgm  curvy_ideal.yaml  curvy_ideal_black.pgm  curvy_ideal_black.yaml  hotel.pgm  hotel.yaml  hotel_black.pgm  mikel.yaml  mikel2.yaml
nav_stack/meshes/: body.mtl  test.world  wheel.mtl
nav_stack/rviz/: demo.rviz  test.rviz
nav_stack/urdf/: model.urdf  traxxas.xacro
traxxas/: CMakeLists.txt  package.xml
traxxas/arduino_scripts/AVC_Driver/AVC_driver/: AVC_driver.ino
traxxas/config/: motor.cfg  port_config.yaml  traxxas_params.yaml  traxxas_params_new.yaml
traxxas/launch/: joy.launch  master_launch.launch  traxxas_driver.launch  wheel_odometry.launch
traxxas/src/: esc_driver.cpp  joy_to_traxxas_node.cpp  stepInput.py  traxxas_cmd_mux_node.py  wheel_odometry.cpp  wheel_odometry.h
traxxas/srv/: unitStep.srv
