<?xml version="1.0"?>
<package format="2">
  <name>avc_car</name>
  <version>1.0.0</version>
  <description>The avc_car metapackage</description>

  <maintainer email="snuc@todo.todo">snuc</maintainer>
  <license>TODO</license>


  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>nav_stack</exec_depend>
  <exec_depend>avc</exec_depend>
  <exec_depend>joy_to_traxxas</exec_depend>
  <exec_depend>traxxas_driver</exec_depend>
  <exec_depend>cmd_vel_to_ackermann</exec_depend>
  <exec_depend>traxxas_cmd_mux</exec_depend>
  <exec_depend>traxxas_to_odom</exec_depend>


  <export>
	<metapackage/>
  </export>
</package>

